# ollie-scraper

./: .gitignore  Cargo.toml  monitor.py  notifier.py  run.sh  status.sh  stop.sh
docs/: discord-scraper.service
docs/plans/: 2025-01-20-fix-review-issues.md  2025-01-20-rust-rewrite.md  2025-01-24-discord-status-scraper.md
src/: main.rs  models.rs  monitor.rs  notifier.rs
tests/: test_notifier.py
