[package]
name = "ollie-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
notify-rust = "4"
url = "2"
futures-util = "0.3"
